[gd_scene load_steps=17 format=3 uid="uid://y2u0j6hxafrl"]

[ext_resource type="Script" uid="uid://deigkeltp8kjw" path="res://scenes/ui/decay_ui/decay_ui.gd" id="1_y6ail"]
[ext_resource type="Theme" uid="uid://bp7gihsracsyc" path="res://resources/theme.tres" id="2_8mt12"]
[ext_resource type="Script" uid="uid://ba1r7xtjjxqur" path="res://scripts/passthrough_container.gd" id="3_hbl1l"]
[ext_resource type="Texture2D" uid="uid://facylhmthgjc" path="res://assets/arcade.png" id="3_uy85n"]
[ext_resource type="Texture2D" uid="uid://b21xaipkf0fns" path="res://assets/glob_white.png" id="5_uy85n"]
[ext_resource type="PackedScene" uid="uid://boefiu860bisa" path="res://scenes/components/shake_animation_component/shake_animation_component.tscn" id="6_jcc6f"]

[sub_resource type="Animation" id="Animation_uy85n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/ProgressBarContainer/Control/ProgressBar:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/ProgressBarContainer/Control/ProgressBar:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LevelLabelContainer:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LevelLabelContainer:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_powpt"]
resource_name = "default"
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelLabelContainer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LevelLabelContainer:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.13962634015954636, 0.13962634, -0.13962634, 0.13962634]
}

[sub_resource type="Animation" id="Animation_hbl1l"]
resource_name = "level_up"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/ProgressBarContainer/Control/ProgressBar:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/ProgressBarContainer/Control/ProgressBar:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j44lw"]
_data = {
&"RESET": SubResource("Animation_uy85n"),
&"default": SubResource("Animation_powpt"),
&"level_up": SubResource("Animation_hbl1l")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hbl1l"]
texture = ExtResource("3_uy85n")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 1.0
texture_margin_bottom = 3.0
region_rect = Rect2(18, 66, 9, 12)

[sub_resource type="Gradient" id="Gradient_imkyo"]
offsets = PackedFloat32Array(0.14, 0.15333334)
colors = PackedColorArray(1, 1, 1, 1, 0.4117647, 1, 0.83137256, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uy85n"]
gradient = SubResource("Gradient_imkyo")

[sub_resource type="Curve" id="Curve_imkyo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.05687204, 1), 0.0, 0.0, 0, 0, Vector2(0.6279621, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_5sj0x"]
curve = SubResource("Curve_imkyo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uy85n"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(4, 0.5, 0)
emission_shape = 1
emission_sphere_radius = 6.0
angle_min = -179.99998
angle_max = 180.00002
spread = 60.0
initial_velocity_min = 100.0
initial_velocity_max = 140.0
gravity = Vector3(0, 160, 0)
scale_min = 1.5999999
scale_max = 2.3999999
scale_curve = SubResource("CurveTexture_5sj0x")
color_initial_ramp = SubResource("GradientTexture1D_uy85n")

[node name="DecayUI" type="CanvasLayer" unique_id=1646004893]
script = ExtResource("1_y6ail")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1532930289]
libraries = {
&"": SubResource("AnimationLibrary_j44lw")
}
autoplay = &"default"

[node name="LevelUpCooldownTimer" type="Timer" parent="." unique_id=1723603037]
wait_time = 3.0

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=979638506]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_8mt12")
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 200

[node name="ProgressBarContainer" type="Container" parent="MarginContainer" unique_id=1649917935]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("3_hbl1l")
center_pivot_offset = true

[node name="Control" type="Control" parent="MarginContainer/ProgressBarContainer" unique_id=1808941241]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/ProgressBarContainer/Control" unique_id=1366517813]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 0
offset_right = 240.0
offset_bottom = 16.0
pivot_offset = Vector2(120, 8)
mouse_filter = 2
theme = ExtResource("2_8mt12")
theme_override_styles/fill = SubResource("StyleBoxTexture_hbl1l")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="SparkGlobs" type="GPUParticles2D" parent="MarginContainer/ProgressBarContainer/Control/ProgressBar" unique_id=125226105]
unique_name_in_owner = true
position = Vector2(122, 8)
amount = 64
texture = ExtResource("5_uy85n")
lifetime = 0.6
preprocess = 60.0
fixed_fps = 0
interpolate = false
process_material = SubResource("ParticleProcessMaterial_uy85n")

[node name="ShakeAnimationComponent" parent="MarginContainer/ProgressBarContainer/Control/ProgressBar" unique_id=823682991 instance=ExtResource("6_jcc6f")]
enabled = true
shake_strength = 0.0
current_shake_percentage = 1.0

[node name="LevelLabelContainer" type="Node2D" parent="." unique_id=200058759]
unique_name_in_owner = true

[node name="LevelLabel" type="Label" parent="LevelLabelContainer" unique_id=1825315994]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
offset_left = -32.0
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
pivot_offset_ratio = Vector2(0.5, 0.5)
theme = ExtResource("2_8mt12")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
